--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@emotion/styled": "^11.11.5",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.10",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "next": "14.2.3",
+    "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
