--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
